# tutor-contrib-aspects

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  codecov.yml  config.yml  pyproject.toml  release-please-config.json  setup.cfg  setup.py  tox.ini
.ci/: config.yml
.github/: dependabot.yml
.github/workflows/: build-aspects.yaml  build-image.yaml  bump-version-manual.yaml  bump-version.yaml  compile-translations.yaml  integration-test.yml  pull-translations.yaml  push-translations.yaml  pypi-publish.yml  release.yaml  release.yml  test-tutor-aspects.yml  test.yml  test_tutor_oars.yml  upgrade-python-requirements.yml
.tx/: config
requirements/: base.in  base.txt  common_constraints.txt  dev.in  dev.txt  pip-tools.txt  pip.txt  translations.in  translations.txt
scripts/: serialize-assets.py  translate.py  translate_utils.py  utils.py
src/tutoraspects/: __about__.py  asset_command_helpers.py  commands_v1.py  filters.py  plugin.py
src/tutoraspects/patches/: caddyfile  clickhouse-server-config  clickhouse-user-config  kustomization-configmapgenerator  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-permissions-volumes  local-docker-compose-services  mfe-dockerfile-post-npm-install-authoring  openedx-dev-dockerfile-post-python-requirements  openedx-development-settings  xapi-db-load-config-yaml
src/tutoraspects/templates/: base-docker-compose-services
src/tutoraspects/translations/: translate.py  translate_utils.py
tutoraspects/: __about__.py  aspects_asset_list.yaml  asset_command_helpers.py  asset_import_helper.py  commands_v0.py  commands_v1.py  filters.py  plugin.py  utils.py
tutoraspects/patches/: caddyfile  clickhouse-named-collection-config  clickhouse-server-config  clickhouse-user-config  k8s-deployments  k8s-jobs  k8s-services  k8s-volumes  kustomization-configmapgenerator  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-permissions-command  local-docker-compose-services  mfe-dockerfile-post-npm-install-authoring  mfe-env-config-runtime-definitions-authoring  openedx-cms-common-settings  openedx-common-settings  openedx-dev-dockerfile-post-python-requirements  openedx-development-settings  openedx-dockerfile-post-python-requirements  superset-row-level-security  xapi-db-load-config-yaml
tutoraspects/templates/: base-docker-compose-services
tutoraspects/templates/openedx-assets/: Attempts_to_first_success_42.yaml  Courses_44.yaml  Enrolled_learners_per_day_36.yaml  Enrollment_events_per_day_16.yaml  Event_type_45.yaml  Events_per_course_46.yaml  Instructor_dashboard_9.yaml  Last_received_xAPI_events_40.yaml  Open_edX_Admin_Dashboard_2.yaml  Operator_Dashboard_5.yaml  Problem_submission_counts_38.yaml  Synchronized_Courses_39.yaml  (+17 more)
tutoraspects/translations/: translate.py  translate_utils.py
tutoroars/: __about__.py  plugin.py
tutoroars/patches/: caddyfile  k8s-deployments  k8s-jobs  k8s-services  k8s-volumes  kustomization-configmapgenerator  local-docker-compose-dev-jobs-services  local-docker-compose-jobs-services  local-docker-compose-services  openedx-cms-common-settings
tutoroars/templates/: base-docker-compose-services
(+431 files in other folders)
